--- a/week1/day1/index.html
+++ b/week1/day1/index.html
@@ -36,7 +36,7 @@
     </ol>
     <br>
     <h2>Media</h2>
-    <img src="cat.jpg" alt="Cat">
+    <img src="https://images.pexels.com/photos/1404819/pexels-photo-1404819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cat">
     <h2 id="lions">The lions</h2>
     <hr>
     <br>
@@ -54,7 +54,7 @@
             <td>Lions spend much of their time and resting, and are inactive for about 20 hours per day.</td>
         </tr>
     </table>
-    <img src="lion.jpg" alt="">
+    <img src="https://images.pexels.com/photos/41314/africa-african-animal-big-41314.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
 
 </body>
 </html>
