--- a/week1/login page/index.html
+++ b/week1/login page/index.html
@@ -41,12 +41,12 @@
         </footer>
     </section>
     <section class="column hello">
-        <i></i>
+        <i class="fa-regular fa-user-plus"></i>
         <h1>Hello, friend!</h1>
-        <p></p>
+        <p class="text">Enter your personal details and start journey with us</p>
         <div class="reg">
             <p>REGISTER</p>
-            <i></i>
+            <i class="fa-regular fa-circle-arrow-right"></i>
         </div>
     </section>
     
