--- a/week1/first_landing_page/index.html
+++ b/week1/first_landing_page/index.html
@@ -15,36 +15,36 @@
         <div><h1>Shopify powers ambitious entrepreneurs all over the world</h1></div>
         <div class="numbers">
             <div class="numbercard">
-                <p class="big_number">500,000</p>
+                <h2 class="big_number">500,000</h2>
                 <p>BUSINESSES POWERED BY SHOPIFY</p>
             </div>
             <div class="numbercard">
-                <p class="big_number">1,000,000+</p>
+                <h2 class="big_number">1,000,000+</h2>
                 <p>ACTIVE USERS</p>
             </div>
             <div class="numbercard">
-                <p class="big_number">$46B+</p>
+                <h2 class="big_number">$46B+</h2>
                 <p>SOLD ON SHOPIFY</p>
             </div>
         </div>
         <div class="cardset">
-            <div class="card">
+            <div class="card tina">
                 <div><p>I am seriously happy about running our store on Shopify. Powerful features and easy to set up, running an online store shouldn't be this much fun!</p></div>
-                <div>
+                <div class="name">
                     <p>Tina Roth Eisenberg</p>
                     <p>Designer, Founder of Tattly</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card corrine">
                 <div><p>Shopify has helped me grow my business amazingly. It's been a pleasure because everything has been easier than I ever imagined.</p></div>
-                <div>
+                <div class="name">
                     <p>Corrine Anestopoulos</p>
                     <p>Founder, BIKO Jewelry</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card chris">
                 <div><p>The best thing about Shopify is that it's made me not have to worry about anything that has to do with ecommerce.</p></div>
-                <div>
+                <div class="name">
                     <p>Chris Tsang</p>
                     <p>Founder, Mindzai Toys</p>
                 </div>
