--- a/week1/bootstrap_dc/index.html
+++ b/week1/bootstrap_dc/index.html
@@ -27,7 +27,7 @@
           </div>
           <div class="col-9">
             <div class="alert alert-danger" role="alert">
-                Uh oh! Have you had your daily dose of veggies today??
+                <b>Uh oh!</b> Have you had your daily dose of veggies today??
             </div>
             <h1 class="fw-bold">Wild & Wacky Vegetables</h1>
             <figure>
