bs dc -leftboard

--- a/week1/bootstrap_dc/index.html
+++ b/week1/bootstrap_dc/index.html
@@ -10,9 +10,9 @@
   <body>
     <div class="container text-start mt-4">
         <div class="row">
-          <div class="col-3 p-5 border border-1 h-50 bg-light rounded">
-            <h4 class="fw-bold text-secondary ms-4 text-uppercase fs-6">Some Favorites</h4>
-            <ul class="list-unstyled ms-4 text-primary lh-lg">
+          <div class="col-3 p-5 border border-1 h-50 bg-light rounded text-start">
+            <h4 class="fw-bold text-secondary text-uppercase fs-6">Some Favorites</h4>
+            <ul class="list-unstyled text-primary lh-lg">
                 <li>Celery Root</li>
                 <li>Spaghetti Squash</li>
                 <li>Killer Mushrooms</li>
