--- a/Portfolio Project/index.html
+++ b/Portfolio Project/index.html
@@ -16,22 +16,22 @@
 <body>
   <nav>
     <div class="logo">
-      <img src="" alt="avatar" class="avatar">
+      <img src="profile_photo.jpeg" alt="avatar" class="avatar">
       <h4>Eugene Livschitz</h4>
     </div>
     <ul>
-      <li><a href="">Home</a></li>
-      <li><a href="">About me</a></li>
-      <li><a href="">Projects</a></li>
-      <li><a href="">Contact</a></li>
+      <li><a href="#home">HOME</a></li>
+      <li><a href="#about">ABOUT ME</a></li>
+      <li><a href="#projects">PROJECTS</a></li>
+      <li><a href="#contact">CONTACT</a></li>
     </ul>
   </nav>
-  <section class="section_1">
+  <section class="section_1" id="home">
     <h1 class="title1">It's great to see you!</h1>
     <h1 class="title2">I'm Eugene Livschitz</h1>
     <h2 class="title3">A student of Developers Institue Tel-Aviv, learning skills of Javascript, React and Python.</h2>
   </section>
-  <section class="about">
+  <section class="about" id="about">
     <div class="about_1"><h2>About me</h2></div>
     <div class="about_2"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error a, delectus perspiciatis enim vero ipsum voluptatum eum. Placeat fugit, eligendi quisquam quae necessitatibus magnam ipsa vitae voluptatem sit modi ea?Lorem ipsum dolor sit amet consectetur adipisicing elit. Error a, delectus perspiciatis enim vero ipsum voluptatum eum. Placeat fugit, eligendi quisquam quae necessitatibus magnam ipsa vitae voluptatem sit modi ea</p></div>
     <div class="about_3">
@@ -41,28 +41,29 @@
       <div class="badge git">GIT</div>
     </div>
   </section>
-  <section class="projects">
+  <section class="projects" id="projects">
     <div class="item_1"><h2>Projects</h2></div>
-    <div class="item_2">2</div>
-    <div class="item_3">3</div>
-    <div class="item_4">4</div>
-    <div class="item_5">5</div>
-    <div class="item_6">6</div>
-    <div class="item_7">7</div>
+    <div class="item_2"><a href="#about"><div class="a"></div></a></div>
+    <div class="item_3"><a href="#about"><div class="a"></div></a></div>
+    <div class="item_4"></div>
+    <div class="item_5"></div>
+    <div class="item_6"></div>
+    <div class="item_7"></div>
   </section>
-  <section class="contact">
+  <section class="contact" id="contact">
     <h2 class="title2">Contact</h2>
     <form action="POST" class="envelope">
       <!-- <input type="name" name="name" id="name" placeholder="Your name"> -->
       <input type="email" name="email" id="email" placeholder="Your email">
       <textarea rows="10" cols="50" name="letter" id="letter" placeholder="Your message"></textarea>
-      <button class="button">Send</button>
+      <button class="btn">Send</button>
     </form>
     <div class="icons">
       <i class="fa-brands fa-github"></i>
       <i class="fa-brands fa-linkedin"></i>
       <i class="fa-brands fa-twitter"></i>
       <i class="fa-brands fa-medium"></i>
+      <i class="fa-solid fa-envelope"></i>
     </div>
   </section>
 </body>
