--- a/Portfolio Project/index.html
+++ b/Portfolio Project/index.html
@@ -33,7 +33,7 @@
   </section>
   <section class="about" id="about">
     <div class="about_1"><h2>About me</h2></div>
-    <div class="about_2"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error a, delectus perspiciatis enim vero ipsum voluptatum eum. Placeat fugit, eligendi quisquam quae necessitatibus magnam ipsa vitae voluptatem sit modi ea?Lorem ipsum dolor sit amet consectetur adipisicing elit. Error a, delectus perspiciatis enim vero ipsum voluptatum eum. Placeat fugit, eligendi quisquam quae necessitatibus magnam ipsa vitae voluptatem sit modi ea</p></div>
+    <div class="about_2"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Edostusmar a, delectus perspiciatis enim vero ipsum voluptatum eum. Placeat fugit, eligendi quisquam quae necessitatibus magnam ipsa vitae voluptatem sit modi ea?Lorem ipsum dolor sit amet consectetur adipisicing elit. Error a, delectus perspiciatis enim vero ipsum voluptatum eum. Placeat fugit, eligendi quisquam quae necessitatibus magnam ipsa vitae voluptatem sit modi ea</p></div>
     <div class="about_3">
       <p>Skills</p>
       <div class="badge html">HTML</div>
