--- a/Week9/Day4/DC/index.html
+++ b/Week9/Day4/DC/index.html
@@ -6,25 +6,29 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;400&display=swap" rel="stylesheet">
     <title>Currency converter</title>
 </head>
 <body>
     <div id="table">
        <h1>Currency converter</h1>
 
-       <label for="fCurrency">From:</label>
-       <select id="fCurrency" class="fields"></select>
+       <div id="container">
 
-       <label for="sCurrency">To:</label>
-       <select id="sCurrency" class="fields"></select>
+            <label for="fCurrency">From:</label>
+            <select id="fCurrency" class="fields"></select>
 
+            <img id="reconvert" onclick="reconvert(event)" alt="arrows" src="628703.png">
+
+            <label for="sCurrency">To:</label>
+            <select id="sCurrency" class="fields"></select>
+       </div>
        <label for="amount">Amount</label>
        <input type="number" name="amount" id="amount" min="1" required class="fields">
 
        <button id="convertBtn" onclick="convert(event)">Convert</button>
 
-       <div id="output"></div>
+       <div id="output" class="fields"></div>
     </div>
     <script src="script.js"></script>
 </body>
